<resources>
    <string name="app_name">Wan Android</string>

    <string name="mainTabOne">首页</string>
    <string name="mainTabTwo">知识体系</string>
    <string name="mainTabThree">书签</string>

    <string name="userName">账号：</string>
    <string name="passWord">密码：</string>
    <string name="confirmPass">确认密码：</string>

    <string name="srartUpTitle">欢迎</string>
    <string name="logingTitle">登录</string>
    <string name="registerTitle">注册</string>
    <string name="aboutTitle">关于我们</string>
    <string name="myCollect">我的收藏</string>
    <string name="mainTitle">wan Android</string>

    <string name="statusTitle">多状态</string>
    <string name="fileDown">文件下载</string>
    <string name="revealEffect">揭露动画</string>
    <string name="test">测试</string>
    <string name="revealEffectJump">揭露动画转场</string>


    <string name="notLogin">未登录</string>
    <string name="exitLogin">退出登录</string>
    <string name="clickLogin">点击登录</string>

    <string name="about_content">
        <![CDATA[
            <h2>网站内容</h2>
            <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
            <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
            <p>如果您有任何好的建议：</p>
                <ul>
                    <li>\t\t关于网站排版</li>
                    <li>\t\t关于新增常用网址以及工具</li>
                    <li>\t\t未来你希望增加的功能等</li>
                </ul>

            <p>\t\t可以在
                <a href="https://github.com/fy310518/wanAndroid" target="_blank">https://github.com/fy310518/wanAndroid</a>
                项目中以issue的形式提出，我们会及时跟进。
            </p>
            <h2>源码位置</h2>

            <p>
                \t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击
                <a href="https://github.com/fy310518/wanAndroid" target="_blank">GitHub</a>，
                在上面发起<b>issue</b>或者提交<b>pull request</b>。
            </p>
        ]]>
    </string>


    <string name="easyPullAnimatorTop">com.fy.baselibrary.widget.refresh.EasyTopRefreshView</string>
    <string name="easyPullAnimatorBottom">com.fy.baselibrary.widget.refresh.EasyBottomLoadMoreView</string>
</resources>
