<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium_small">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/userName"
            android:theme="@style/customLineColor"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRegisterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/passWord"
            android:theme="@style/customLineColor"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:counterOverflowTextAppearance="@style/HintErrorAppearance"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errorAppearance"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintTop_toBottomOf="@id/tilRegisterName"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editRegisterPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRegisterPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirmPass"
            android:theme="@style/customLineColor"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:counterOverflowTextAppearance="@style/HintErrorAppearance"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errorAppearance"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintAppearance"
            app:layout_constraintTop_toBottomOf="@id/tilRegisterPass"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editRegisterPass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iLayoutPass"
            android:layout_marginLeft="@dimen/spacing_medium_large"
            android:layout_marginRight="@dimen/spacing_medium_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/shape_btn"
            android:text="@string/registerTitle"
            android:textColor="@color/titleBarCon"
            android:textSize="@dimen/txt_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilRegisterPass2" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>